--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "clsx": "^2.1.0",
     "nuxt": "^3.10.2",
+    "tailwind-merge": "^2.2.2",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   }
