--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.7",
     "tailwind-merge": "^2.2.2",
     "vue": "^3.4.19",
+    "vue-debounce": "^5.0.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
