--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.20",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia/nuxt": "^0.5.1",
+    "@vue/compiler-sfc": "^3.4.23",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
-    "nuxt": "^3.10.2",
+    "floating-vue": "^5.2.2",
+    "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "tailwind-merge": "^2.2.2",
     "vue": "^3.4.19",
