--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@pinia/nuxt": "^0.5.1",
     "@vue/compiler-sfc": "^3.4.23",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "floating-vue": "^5.2.2",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "tailwind-merge": "^2.2.2",
     "vue": "^3.4.19",
+    "vue-chartjs": "^5.3.1",
     "vue-debounce": "^5.0.0",
     "vue-router": "^4.2.5"
   },
