--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.7.20",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia/nuxt": "^0.5.1",
+    "@types/ramda": "^0.29.12",
     "@vue/compiler-sfc": "^3.4.23",
     "@vuepic/vue-datepicker": "^8.4.0",
     "@vueuse/core": "^10.9.0",
@@ -24,6 +25,7 @@
     "moment": "^2.30.1",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "ramda": "^0.29.1",
     "tailwind-merge": "^2.2.2",
     "vue": "^3.4.19",
     "vue-chartjs": "^5.3.1",
